# dummy-pkg-for-tests

./: pyproject.toml
src/dummy_pkg_for_tests/: shrubbery.py
